; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwtracing/coresight/extr_coresight-stm.c_stm_disable_hw.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwtracing/coresight/extr_coresight-stm.c_stm_disable_hw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stm_drvdata = type { i64, i64 }

@STMTCSR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stm_drvdata*)* @stm_disable_hw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stm_disable_hw(%struct.stm_drvdata* %0) #0 {
  %2 = alloca %struct.stm_drvdata*, align 8
  %3 = alloca i32, align 4
  store %struct.stm_drvdata* %0, %struct.stm_drvdata** %2, align 8
  %4 = load %struct.stm_drvdata*, %struct.stm_drvdata** %2, align 8
  %5 = getelementptr inbounds %struct.stm_drvdata, %struct.stm_drvdata* %4, i32 0, i32 1
  %6 = load i64, i64* %5, align 8
  %7 = call i32 @CS_UNLOCK(i64 %6)
  %8 = load %struct.stm_drvdata*, %struct.stm_drvdata** %2, align 8
  %9 = getelementptr inbounds %struct.stm_drvdata, %struct.stm_drvdata* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @STMTCSR, align 8
  %12 = add nsw i64 %10, %11
  %13 = call i32 @readl_relaxed(i64 %12)
  store i32 %13, i32* %3, align 4
  %14 = load i32, i32* %3, align 4
  %15 = and i32 %14, -2
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* %3, align 4
  %17 = load %struct.stm_drvdata*, %struct.stm_drvdata** %2, align 8
  %18 = getelementptr inbounds %struct.stm_drvdata, %struct.stm_drvdata* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @STMTCSR, align 8
  %21 = add nsw i64 %19, %20
  %22 = call i32 @writel_relaxed(i32 %16, i64 %21)
  %23 = load %struct.stm_drvdata*, %struct.stm_drvdata** %2, align 8
  %24 = getelementptr inbounds %struct.stm_drvdata, %struct.stm_drvdata* %23, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @CS_LOCK(i64 %25)
  %27 = load %struct.stm_drvdata*, %struct.stm_drvdata** %2, align 8
  %28 = call i32 @stm_port_disable_hw(%struct.stm_drvdata* %27)
  %29 = load %struct.stm_drvdata*, %struct.stm_drvdata** %2, align 8
  %30 = getelementptr inbounds %struct.stm_drvdata, %struct.stm_drvdata* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %36

33:                                               ; preds = %1
  %34 = load %struct.stm_drvdata*, %struct.stm_drvdata** %2, align 8
  %35 = call i32 @stm_hwevent_disable_hw(%struct.stm_drvdata* %34)
  br label %36

36:                                               ; preds = %33, %1
  ret void
}

declare dso_local i32 @CS_UNLOCK(i64) #1

declare dso_local i32 @readl_relaxed(i64) #1

declare dso_local i32 @writel_relaxed(i32, i64) #1

declare dso_local i32 @CS_LOCK(i64) #1

declare dso_local i32 @stm_port_disable_hw(%struct.stm_drvdata*) #1

declare dso_local i32 @stm_hwevent_disable_hw(%struct.stm_drvdata*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
